@@ -1,6 +1,9 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Modified the exception handling in the RestHandler. Asynchronous communication
+  could lead to less detailed failure information.
+
 * Use smarter default value preset in web UI for replication factor in case
   there are constraints established for the replication factor by the startup
   options `--cluster.min-replication-factor` and
